Make sure children of headerComponents are back to their original text-align. Enyo-DCO-1.1-Signed-Off-By: Kevin Schaaf (kevin.schaaf@lge.com)

--- a/css/Header.less
+++ b/css/Header.less
@@ -59,6 +59,10 @@
 	right: 0px;
 	text-align: right;
 }
+.moon-header-client > * {
+	text-align: left;	/* fallback in case text-align:start isn't supported */
+	text-align: start;	/* CSS3 for RTL support */
+}
 .moon-header-left {
 	float: left;
 }
