--- a/css/moonstone.css
+++ b/css/moonstone.css
@@ -1360,6 +1360,14 @@
   right: 0px;
   text-align: right;
 }
+.moon-header-client > * {
+  text-align: left;
+  /* fallback in case text-align:start isn't supported */
+
+  text-align: start;
+  /* CSS3 for RTL support */
+
+}
 .moon-header-left {
   float: left;
 }
